Refactored Events Page (Branch #2) -- Fixed text overlapping issue. (#738)
* Refactored the UI on the Events Page. 
* Fixed event list and card tests to fit the new functionalities. 
* Created a filtering function that displays only events that include the dates of the current day and beyond on the general events page. 
* Added form validation.

--- a/src/Pages/Events/event-page.css
+++ b/src/Pages/Events/event-page.css
@@ -1,67 +1,63 @@
 .event-list {
   padding-top: 20px;
   padding-bottom: 30px;
-}
-
-.event-background {
-  background: linear-gradient(90deg, rgb(4, 27, 56) , rgb(33, 139, 172));
-  min-height: 100vh;
-  min-width: 100vw;
+  justify-content: space-between;
 }
 
 .event-card-button {
   width: 90%;
   padding: 1%;
   min-width: 480px;
-  min-height: 170px;
+  min-height: 300px;
   margin-top: 2.5%;
-  border-radius: 10px;
   outline: transparent !important;
   border: transparent;
-  background: #e0e0e0;
+  background: #fcfcfc; 
+  box-shadow: 10px 10px 30px rgb(105, 103, 103);
+  display:flex; 
+  flex-direction:row;
 }
 
 .event-title {
-  white-space: nowrap;
+  white-space: wrap;
   font-weight: bold;
-  font-size: 2.5rem;
-  color: #000000;
-  text-overflow: ellipsis;
+  font-size: 2.7rem;
+  color: #2e0e49;
   overflow: hidden;
-  display: block !important;
-}
-
-.event-date {
-  font-style: italic;
-  font-weight: bold;
-  font-size: 1.6rem;
-  color: #0098ab;
-  display: block !important; 
-}
-
-.event-location {
-  white-space: nowrap;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.6rem;
-  color: #414141bd;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: block !important;
+  max-width: 100%;
 }
 
 .event-image {
-  float: left;
-  height: 150px;
-  width: 20vw;
-  max-width:300px;
-  border-radius: 10px;
+  float: right !important;
+  height: 40vh;
+  width: 100%; 
+  border-radius: 5px;
 }
 
-@media screen and (max-width: 900px) { 
-  .event-image { display: none; } 
-  .event-title{ margin: 0 !important;} 
-  .event-location{ margin: 0 !important;} 
+.event-info {
+  min-width: 60%;
+  padding-right:50px;
+  padding-left: 50px;
+  overflow-wrap: break-word;
+
+  font-size: 1.7rem;
+  color: #504579;
+  display: block !important; 
+  text-overflow: ellipsis;
+  text-align: left;
+  max-width: 100%;
+}
+
+#image-block {
+  padding: 0px;
+}
+
+@media screen and (max-width: 1100px) {
+  #image-block { display:none !important; }
+  .event-text-block { max-width: 100%; padding: 10%; } 
+  .event-card-button { min-width: 100% }
+  .event-title{ margin: 0 !important; padding-right: 50px !important; } 
+  .event-location{ margin: 0 !important; } 
 }
 
 .image-container > img {
